# winsomnia-ssh

./: README.md  pyproject.toml
tests/: test_winsomnia_ssh.py
winsomnia_ssh/: winsomnia_ssh.py
