[project]
name = "winsomnia-ssh"
version = "0.2.0"
description = "Prevent Windows from sleeping during a WSL SSH session, and a CLI to pause sleep on demand."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "Takaya Saeki", email = "abc.tkys+pub@gmail.com" },
    { name = "Matt Wilkinson", email = "mattwilki17@gmail.com" },
]
dependencies = [
    "psutil>=5.8",
]

[project.scripts]
winsomnia-ssh = "winsomnia_ssh.winsomnia_ssh:main"
winsomnia = "winsomnia_ssh.winsomnia:main"

[project.urls]
Homepage = "https://github.com/nullpo-head/winsomnia-ssh"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff",
    "ty",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.ty.environment]
python-version = "3.14"
